<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">点播</string>
    <string name="title_activity_main">点播</string>
    <string name="live_video_start_record">开始共享</string>
    <string name="live_video_stop_recording">停止共享</string>
    <string name="msg_send_button_text">发送</string>
    <string name="pos_search_button_text">M</string>
    <string name="cellphone_numer_hint">手机号</string>
    <string name="verification_code_hint">验证码</string>
    <string name="verification_code_text">验证</string>
    <string name="log_on_btn_text">登录</string>
    <string name="reg_btn_text">注册</string>
    <string name="login_reg_btn_text">注册/登录</string>
    <string name="notification_get_verification_code">验证码已发送!</string>
    <string name="personal_my_friends">我的朋友</string>
    <string name="personal_my_follow">我的关注</string>
    <string name="personal_my_fans">我的粉丝</string>
    <string name="personal_friends_invitation">添加朋友</string>
    <string name="personal_my_wallet">我的钱包</string>
    <string name="personal_my_videos">我的视频</string>
    <string name="personal_my_message">我的消息</string>
    <string name="personal_my_setting">设置</string>
    <string name="fans_list_title">我的粉丝</string>
    <string name="following_list_title">我的关注</string>
    <string name="personal_title_bar">我</string>
    <string name="error_cellphone_required">请输入手机号</string>
    <string name="error_verification_code_required">请输入验证码</string>
    <string name="error_get_verification_code">获取验证码失败!</string>
    <string name="error_login_in">登录失败!</string>
    <string name="bottom_seatch_text_tip">左击搜地图 右击发评论</string>
    <string name="video_share_button_share">分享视频</string>
    <string name="video_share_button_unshare">取消视频</string>
    <string name="error_no_any_watching_video">没有视频信息</string>
    <string name="error_no_open_remote_live_failed">开启远端视频失败</string>
    <string name="login_action_text_verification">验证</string>
    <string name="login_action_text_start">开  始</string>
    <string name="login_action_text_1">点击</string>
    <string name="login_action_text_2">开始</string>
    <string name="login_action_text_3">即表示您同意</string>
    <string name="login_action_text_4">《</string>
    <string name="login_action_text_5"><u>法律声明及隐私政策</u></string>
    <string name="login_action_text_6">》</string>
    <string name="login_action_text_username_hint">手机号</string>
    <string name="login_action_text_code_hint">验证码</string>
    <string name="login_error_incorrect_phone_number">手机号不正确</string>
    <string name="login_bottom_other_account_text">第三方帐号登录</string>
    <string name="login_error_text_incorrect_username_pwd">请输入正确的手机号码或验证码</string>
    <string name="main_search_no_element_found">没有找到相关的信息</string>
    <string name="empty_image_content_desc"></string>
    <string name="personal_show_avatar_text">头像</string>
    <string name="personal_show_nick_name_text">昵称</string>
    <string name="personal_show_gender_text">性别</string>
    <string name="personal_region_text">地区</string>
    <string name="personal_siganture_text">个性签名</string>
    <string name="personal_name_text">姓名</string>
    <string name="personal_code_text">我的二维码</string>
    <string name="personal_show_title_text">个人信息</string>
    <string name="personel_user_list_title_follow">我的关注</string>
    <string name="personel_user_list_title_fans">我的粉丝</string>
    <string name="personel_user_list_title_friends">我的朋友</string>
    <string name="personel_user_list_title_friend_invitation">添加朋友</string>
    <string name="personel_user_list_title_message">我的消息</string>
    <string name="personal_search_bar_follow_text">请输入关键字</string>
    <string name="personel_item_user_f_text">+关注</string>
    <string name="personel_item_user_cf_text">取消关注</string>
    
    
    <string name="personel_setting_account_security_text">帐号安全</string>
    <string name="personel_setting_privacy_text">隐私</string>
    <string name="personel_setting_legal_text">法律及其隐私政策</string>
    <string name="personel_setting_abount_us_text">关于我们</string>
    <string name="personel_setting_page_rank_text">给个好评</string>
    <string name="personel_setting_log_out_text">退出</string>
    <string name="personel_setting_title_bar">设置</string>
    
    <string name="personel_video_title_bar">我的视频</string>
    
    
    <string name="personel_wallet_title_bar">我的钱包</string>
    <string name="personel_wallet_balance_text">余额</string>
    <string name="personel_wallet_incharge_text">充值</string>
    <string name="personel_wallet_withdraw_text">提现</string>
    <string name="personel_wallet_balance_detail">余额明细</string>
    
    
    <string name="liver_interaction_follow">关注</string>
    <string name="liver_interaction_cancel_follow">取消关注</string>
    <string name="liver_interaction_personel_text_video_text">视频</string>
    <string name="liver_interaction_personel_text_fans_text">粉丝</string>
    <string name="liver_interaction_personel_text_follow_text">关注</string>
    <string name="liver_interaction_personel_text_label">设备备注和标签</string>
     <string name="liver_interaction_personel_message_send_btn_text">发消息</string>
     <string name="liver_interaction_personel_video_call_btn_text">视频聊天</string>
     <string name="liver_interaction_personel_audio_call_btn_text">按住对讲</string>
     <string name="liver_interaction_personel_tips_btn_text">打赏</string>
     <string name="liver_interaction_personel_tips_video_record_text">录制</string>
     
    
    <string name="requesting_connect_video_text">邀请您视频聊天</string>
    <string name="requesting_connect_audio_text">邀请您对讲</string>
    
    <string name="video_share_btn_text_wx">微信好友</string>
    <string name="video_share_btn_text_wx_grp">微信朋友圈</string>
    <string name="video_share_btn_text_qq">QQ好友</string>
    <string name="video_share_btn_text_wb">新浪微博</string>
    <string name="video_share_tips_text">直播分享至</string>
    <string name="card_scan_scan_text">扫一扫</string>
    <string name="card_scan_scan_text1">扫描二维码名片</string>
    <string name="personal_friends_invitation_search_tips">昵称/手机号</string>
    
    <string name="audio_call_connecting">正在等待对方接受邀请</string>
    
    <string name="bounty_title_text">想看看这里</string>
    
    <string name="p2p_message_btn_text_pressed_tip">松开结束</string>
    <string name="p2p_message_btn_text_release_tip">按住说话</string>
    
    <string name="voice_record_text_tip_1">说话时间太短</string>
    <string name="voice_record_text_tip_2">说话时间太长</string>
    <string name="voice_record_text_tip_3">松开手指，取消发送</string>
    <string name="voice_record_text_tip_4">手指上划，取消发送</string>
    <string name="voice_record_text_occupcation">占位占位占位占位占位</string>
    <string name="p2p_message_send_btn_text">发送</string>
    
    <string name="inquiry_bid_text1">悬赏金额</string>
    <string name="inquiry_bid_text1_hint">填写金额（元）</string>
    <string name="inquiry_bid_text2">附言</string>
    <string name="inquiry_bid_text2_hint">添加悬赏附言</string>
    <string name="inquiry_bid_btn_text">立即悬赏</string>
    <string name="map_location_tips_text">请输入关键字</string>
    
    <string name="inquiry_action_accept_btn_text">接受悬赏，带TA去瞅瞅</string>
    <string name="inquiry_action_audio_btn_text">按住对讲</string>
    <string name="inquiry_action_video_share_btn_text">视频直播</string>
    <string name="inquiry_start_notification">正在通知附近的朋友...</string>
    <string name="inquiry_error_incorrect_award">请输入正确的金额</string>
    <string name="inquiry_accepted">带你去瞅瞅儿</string>
    <string name="inquiry_accept_error_no_location">请等待定位！</string>
    
    
    <string name="message_session_system_msg">系统消息</string>
    <string name="video_lock_setting_dialog_layout_banner_text">设置密码</string>
    <string name="video_unlock_setting_dialog_layout_banner_text">确定取消视频加密</string>
    

</resources>
