<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_reg_layout_bg" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/login_reg_title_bar_bg" >

        <ImageView
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/arrow_left_gray" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_bar_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title_bar"
        android:background="#c0c0c0" >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_line"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/login_reg_cellphone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/login_reg_verification_code_btn"
                android:background="@drawable/input_bg"
                android:hint="@string/cellphone_numer_hint"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#000000"
                android:textColorHint="#c2c2c2" >
            </EditText>

            <Button
                android:id="@+id/login_reg_verification_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_gray_bg"
                android:padding="20dp"
                android:text="@string/verification_code_text"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/login_reg_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:hint="@string/verification_code_hint"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textColorHint="#c2c2c2" >
        </EditText>

        <Button
            android:id="@+id/login_reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_gray_bg"
            android:padding="20dp"
            android:text="@string/login_reg_btn_text"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>