<?xml version="1.0" encoding="utf-8"?>
<com.v2tech.widget.VideoShareBtnLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/video_share_ly_bg" >



    <Button
        android:id="@+id/video_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/video_share_button_bg"
        android:text=""
        android:textColor="@color/video_share_button_text_color" />

    <TextView
        android:id="@+id/video_share_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_share_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/video_share_tips_text"
        android:textColor="#a0a0a0"
        android:textSize="@dimen/video_share_btn_ly_tips_text_size" />

    <LinearLayout
        android:id="@+id/video_share_outer_btn_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_share_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:id="@+id/video_share_wechat_share_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/video_share_bottom_btn_wx" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/video_share_btn_text_wx"
                android:textColor="#000000"
                android:textSize="@dimen/video_share_btn_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/video_share_bottom_btn_wx_grp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/video_share_btn_text_wx_grp"
                android:textColor="#000000"
                android:textSize="@dimen/video_share_btn_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/video_share_bottom_btn_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/video_share_btn_text_qq"
                android:textColor="#000000"
                android:textSize="@dimen/video_share_btn_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/video_share_bottom_btn_wb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/video_share_btn_text_wb"
                android:textColor="#000000"
                android:textSize="@dimen/video_share_btn_text_size" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/video_share_map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:src="@drawable/video_share_map_btn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_share_outer_btn_ly"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="vertical" >

    </LinearLayout>

</com.v2tech.widget.VideoShareBtnLayout>